2008-08-20  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildDllToLibName): Correct 'cyg'
	prefix handling. Add zlib special case.
	(CygbuildDefineVersionVariables): Improve error message.
	(CygbuildInstallCygwinPartMain): Improve error message.

2008-08-20  Jari Aalto  <jari.aalto@cante.net>

	* etc/lib/cygbuild.pl: (HELP::Patch management
	commands::patch/unpatch): Document that *.patch files are sorted.

	* etc/lib/libcheck.sh: (CygbuildCmdInstallCheckBinFiles): Remove
	*.pyc.

	* bin/cygbuild.sh:
	(CygbuildDefineGlobalCommand): Improve error messages.
	(CygbuildCmdDownloadUpstream): Announce mywebget.pl URL
	is program was not found. Drop *.pl extension. Improve
	error message if CYGWIN-PATCHES/ not found.

2008-05-08  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildInstallFixInterpreterGeneric):
	Handle '/usr/bin/env interpreter' shebang lines better.

2008-03-29  Jari Aalto  <jari.aalto@cante.net>

	* etc/lib/libcheck.sh: (CygbuildCmdInstallCheckEverything): New.

	* bin/cygbuild.sh
	-- Relocate massive amount of functions to libcheck.sh.
	(CygbuildCmdInstallCheckMain): Rewritten. Move
	logic to `CygbuildCmdInstallCheckEverything'.
	(CygbuildInstallFixInterpreterMain): At beginning, chnage incorrect
	variable debinition pybin to `rbbin'. This error caused all
	python file to have ruby interpreters.
	(CygbuildTarOptionCompress): Return --gzip, --bzip2, not j, z.
	(CygbuildCmdPkgDevelStandardBin): Make taropt more readable.
	(CygbuildCmdPkgDevelStandardMain): Remove unuset tar variable
	statements.
	(CygbuildExtractTar): Make tar options more readable.
	(CygbuildPod2man): Set mansect to 1 if empty. Add new arg 3,
	Destdir.

2008-03-28  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/Makefile.tmp (BINDIR): Remove extra /bin.

2008-03-18  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdStripMain): Use plain find,
	which is faster. Convert for-loop to while loop. Change
	Support filenames with spaces.